--- a/apps-vu/transactive-blockchain/Demo/.env
+++ b/apps-vu/transactive-blockchain/Demo/.env
@@ -46,7 +46,7 @@ export DIR="~/projects"
 # set to path from DIR to Demo
 export PROJECT="riaps/riaps-apps/apps-vu/transactive-blockchain/Demo"
 # set to location of geth standalone folder
-export GETH="~/projects/geth-linux-amd64-1.7.0-6c6c7b2a"
+export GETH="/home/riaps/projects/geth-linux-amd64-1.7.0-6c6c7b2a"
 
 # -- These are used exclusively in the launch script by tmux to view activity
 export RECORDER='172.21.20.51'
