made Makefile a bit more generic

--- a/apps-vu/transactive-blockchain/Demo/.env
+++ b/apps-vu/transactive-blockchain/Demo/.env
@@ -1,15 +1,16 @@
 #!/bin/sh
 export HISTIGNORE='*sudo -S*'
+export EXPERIMENTS='/home/riaps/projects/riaps/riaps-apps/apps-vu/transactive-blockchain/experiments'
 
 # -------------------------------------------------------------------------------------------------
 #  If changes are made to these values be sure to run ./pack.sh in transactive-blockchain/Demo/cli
 # -------------------------------------------------------------------------------------------------
 
 # -- Picks up the environment variables from .myenv --
-# source .myenv
+#source .myenv;
 
 # -- Array of ips for devices in network that will be used as hosts --
-export BBBs=(172.21.20.47 172.21.20.51 172.21.20.53 172.21.20.57 172.21.20.59 172.21.20.60 172.21.20.61 172.21.20.62 172.21.20.63 172.21.20.64)
+export BBBs=(172.21.20.47 172.21.20.51 172.21.20.53 172.21.20.63)
 # "bbb-1b70": "172.21.20.47", "bbb-a327": "172.21.20.51",
 # "bbb-2592": "172.21.20.53", "bbb-8014": "172.21.20.57",
 # "bbb-e4ff": "172.21.20.59", "bbb-50c9": "172.21.20.60",
@@ -23,7 +24,7 @@ export BBBs=(172.21.20.47 172.21.20.51 172.21.20.53 172.21.20.57 172.21.20.59 17
 # -- The ip of the VM
 export CTRL='172.21.20.5'
 # -- The ip of the node that will run the DSO.
-export DSO='172.21.20.47'
+export DSO='172.21.20.53'
 
 
 # -- The ip of the VM
@@ -50,5 +51,5 @@ export GETH="/home/riaps/projects/geth-linux-amd64-1.7.0-6c6c7b2a"
 
 # -- These are used exclusively in the launch script by tmux to view activity
 export RECORDER='172.21.20.51'
-export T101='172.21.20.53'
+export T101='172.21.20.47'
 export T106='172.21.20.63'
