--- a/apps-vu/transactive-blockchain/Demo/.env
+++ b/apps-vu/transactive-blockchain/Demo/.env
@@ -10,7 +10,7 @@ export EXPERIMENTS='/home/riaps/projects/riaps/riaps-apps/apps-vu/transactive-bl
 #source .myenv;
 
 # -- Array of ips for devices in network that will be used as hosts --
-export BBBs=(172.21.20.47 172.21.20.51 172.21.20.53 172.21.20.63)
+export BBBs=(172.21.20.32 172.21.20.31 172.21.20.30 172.21.20.29)
 # "bbb-1b70": "172.21.20.47", "bbb-a327": "172.21.20.51",
 # "bbb-2592": "172.21.20.53", "bbb-8014": "172.21.20.57",
 # "bbb-e4ff": "172.21.20.59", "bbb-50c9": "172.21.20.60",
@@ -22,9 +22,12 @@ export BBBs=(172.21.20.47 172.21.20.51 172.21.20.53 172.21.20.63)
 #------------------------------
 # -- IP of the actors.
 # -- The ip of the VM
-export CTRL='172.21.20.5'
+export CTRL='172.21.20.100'
 # -- The ip of the node that will run the DSO.
-export DSO='172.21.20.53'
+export DSO='172.21.20.29'
+
+# -- The ip of the node that will run the simulation --
+export __GRID__='172.21.20.?'
 
 
 # -- The ip of the VM
@@ -35,7 +38,7 @@ export MINER=$CTRL
 export PORT=10000
 
 # -- InfluxDB configuration parameters --
-export INFLUX_DBASE_HOST='172.21.20.5'
+export INFLUX_DBASE_HOST='172.21.20.100'
 export INFLUX_DBASE_PORT=8086
 export INFLUX_DBASE_NAME='RIAPSEnergyMarket'
 
@@ -50,6 +53,6 @@ export PROJECT="riaps/riaps-apps/apps-vu/transactive-blockchain/Demo"
 export GETH="/home/riaps/projects/geth-linux-amd64-1.7.0-6c6c7b2a"
 
 # -- These are used exclusively in the launch script by tmux to view activity
-export RECORDER='172.21.20.51'
-export T101='172.21.20.47'
-export T106='172.21.20.63'
+export RECORDER='172.21.20.30'
+export T101='172.21.20.32'
+export T106='172.21.20.31'
