integration mostly stable

--- a/apps-vu/transactive-blockchain/Demo/pkg/libs/.env
+++ b/apps-vu/transactive-blockchain/Demo/pkg/libs/.env
@@ -26,6 +26,9 @@ export CTRL='172.21.20.100'
 # -- The ip of the node that will run the DSO.
 export DSO='172.21.20.29'
 
+# -- The ip of the node that will run the simulation --
+export GRID='172.21.20.35'
+
 
 # -- The ip of the VM
 export SOLVER=$CTRL
@@ -52,4 +55,4 @@ export GETH="/home/riaps/projects/geth-linux-amd64-1.7.0-6c6c7b2a"
 # -- These are used exclusively in the launch script by tmux to view activity
 export RECORDER='172.21.20.30'
 export T101='172.21.20.32'
-export T106='172.21.20.31'
+export T102='172.21.20.31'
