--- a/apps-vu/transactive-blockchain/Demo/.env
+++ b/apps-vu/transactive-blockchain/Demo/.env
@@ -27,7 +27,7 @@ export CTRL='172.21.20.100'
 export DSO='172.21.20.29'
 
 # -- The ip of the node that will run the simulation --
-export __GRID__='172.21.20.?'
+export GRID='172.21.20.35'
 
 
 # -- The ip of the VM
@@ -55,4 +55,4 @@ export GETH="/home/riaps/projects/geth-linux-amd64-1.7.0-6c6c7b2a"
 # -- These are used exclusively in the launch script by tmux to view activity
 export RECORDER='172.21.20.30'
 export T101='172.21.20.32'
-export T106='172.21.20.31'
+export T102='172.21.20.31'
