--- a/apps-vu/transactive-blockchain/Demo/.env
+++ b/apps-vu/transactive-blockchain/Demo/.env
@@ -10,7 +10,8 @@ export EXPERIMENTS='/home/riaps/projects/riaps/riaps-apps/apps-vu/transactive-bl
 #source .myenv;
 
 # -- Array of ips for devices in network that will be used as hosts --
-export BBBs=(172.21.20.32 172.21.20.31 172.21.20.30 172.21.20.29)
+# export BBBs=(172.21.20.32 172.21.20.31 172.21.20.30 172.21.20.29)
+export BBBs=(172.21.20.32 172.21.20.31 172.21.20.30 172.21.20.29 172.21.20.28 172.21.20.27 172.21.20.26 172.21.20.25 172.21.20.24 172.21.20.22 172.21.20.21 172.21.20.19 172.21.20.18 172.21.20.17 172.21.20.16 172.21.20.12 172.21.20.8 172.21.20.6)
 # "bbb-1b70": "172.21.20.47", "bbb-a327": "172.21.20.51",
 # "bbb-2592": "172.21.20.53", "bbb-8014": "172.21.20.57",
 # "bbb-e4ff": "172.21.20.59", "bbb-50c9": "172.21.20.60",
@@ -55,5 +56,5 @@ export GETH="/home/riaps/projects/geth-linux-amd64-1.8.22-7fa3509e"
 
 # -- These are used exclusively in the launch script by tmux to view activity
 export RECORDER='172.21.20.30'
-export T101='172.21.20.32'
-export T102='172.21.20.31'
+export T101='172.21.20.6'
+export T102='172.21.20.8'
